# autofoo

./: .gitignore  README.md  autofoo  autofoo.py  genrss.py  pyproject.toml  tvshows.list
src/: utils.py
