[project]
name = "autofoo"
version = "0.1.0"
description = "automatically find and download scene TV shows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "feedparser>=6.0.11",
    "plyvel>=1.5.1",
    "pyload-ng>=0.5.0b3.dev87",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "webdriver-manager>=4.0.2",
    "zenrows>=1.4.0",
]
